# propel

./: .gitignore  Cargo.toml  README.md  arch-lint.toml
.github/workflows/: ci.yml
crates/propel/: Cargo.toml  README.md
crates/propel-build/: Cargo.toml  README.md
crates/propel-build/src/: bundle.rs  dockerfile.rs  eject.rs  lib.rs
crates/propel-build/tests/: build_test.rs
crates/propel-cli/: Cargo.toml
crates/propel-cli/src/: main.rs
crates/propel-cli/src/commands/: ci.rs  deploy.rs  deploy_pipeline.rs  destroy.rs  doctor.rs  eject.rs  init.rs  logs.rs  mcp.rs  mod.rs  new.rs  secret.rs  status.rs
crates/propel-cli/tests/: architecture.rs  cli_test.rs
crates/propel-cloud/: Cargo.toml  README.md
crates/propel-cloud/src/: client.rs  executor.rs  gcloud.rs  lib.rs
crates/propel-cloud/tests/: client_test.rs
crates/propel-core/: Cargo.toml  README.md
crates/propel-core/src/: cargo.rs  config.rs  error.rs  lib.rs  project.rs
crates/propel-core/tests/: cargo_test.rs  config_test.rs  project_test.rs
crates/propel-sdk/: Cargo.toml  README.md
crates/propel-sdk/src/: error.rs  lib.rs  middleware.rs  state.rs
crates/propel-sdk/tests/: middleware_test.rs  state_test.rs
crates/propel/src/: auth.rs  lib.rs  state.rs
crates/propel/tests/: facade_test.rs  state_test.rs
docs/: gcp-setup.md
examples/hello-axum/: Cargo.toml  propel.toml
examples/hello-axum/src/: main.rs
