[workspace]
resolver = "2"
members = [
    "crates/propel",
    "crates/propel-cli",
    "crates/propel-core",
    "crates/propel-build",
    "crates/propel-cloud",
    "crates/propel-sdk",
]

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/propel"
homepage = "https://github.com/ynishi/propel"

[workspace.dependencies]
# Internal
propel-core = { path = "crates/propel-core", version = "0.4.1" }
propel-build = { path = "crates/propel-build", version = "0.4.1" }
propel-cloud = { path = "crates/propel-cloud", version = "0.4.1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Web framework (SDK)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Auth
jsonwebtoken = "9"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.13"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"
