[package]
name = "propel-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dockerfile and Cloud Build configuration generator for Propel"

[dependencies]
propel-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
