[package]
name = "propel-build"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Dockerfile and Cloud Build configuration generator for Propel"
readme = "README.md"
keywords = ["deploy", "docker", "dockerfile", "cloud-build"]
categories = ["development-tools"]

[dependencies]
propel-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
