[package]
name = "propel-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GCP Cloud Run and Cloud Build operations for Propel"

[dependencies]
propel-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
