[package]
name = "propel-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GCP Cloud Run and Cloud Build operations for Propel"
readme = "README.md"
keywords = ["deploy", "cloud-run", "gcp", "cloud-build"]
categories = ["development-tools"]

[dependencies]
propel-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
