[package]
name = "propel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, configuration, and error handling for Propel"
readme = "README.md"
keywords = ["deploy", "cloud-run", "gcp", "configuration"]
categories = ["config", "development-tools"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
