[package]
name = "propel-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Axum middleware and helpers for Propel (Supabase + Cloud Run)"
readme = "README.md"
keywords = ["axum", "supabase", "jwt", "middleware", "auth"]
categories = ["web-programming", "authentication"]

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
jsonwebtoken = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
