[package]
name = "propel-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DEPRECATED: use `propel` instead. This crate has been merged into the `propel` crate."
readme = "README.md"
keywords = ["deprecated", "axum", "supabase", "jwt", "middleware"]
categories = ["web-programming", "authentication"]

[dependencies]
propel = { path = "../propel", version = "0.3.0" }
