[package]
name = "propel-sdk"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DEPRECATED: use `propel` instead. This crate has been merged into the `propel` crate."
readme = "README.md"
keywords = ["deprecated", "axum", "supabase", "jwt", "middleware"]
categories = ["web-programming", "authentication"]

[package.metadata.release]
release = false

[dependencies]
propel = { path = "../propel", version = "0.4.0" }
